<resources>
    <string name="app_name">Easy_A</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome_back">Hi, Welcome Back!</string>
    <string name="missed_you">Hello again, you\'ve been missed!</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="dont_have_account">Don’t have an account?</string>
    <string name="or">or</string>
    <string name="sign_up">Sign Up</string>
    <string name="view_academic_events">View Your Academic Events,</string>
    <string name="event_name_label">Event Name:</string>
    <string name="monthly_academic_events">Monthly Academic events:</string>
    <string name="event_hint">Give your event a neat name</string>
    <string name="select_event_date">Select an Event Date</string>
    <string name="add_new_event">Add New Event</string>
    <string name="day_sunday">Su</string>
    <string name="day_monday">Mo</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">We</string>
    <string name="day_thursday">Th</string>
    <string name="day_friday">Fr</string>
    <string name="day_saturday">Sa</string>
    <string name="register_greeting">Hi, Nice to Meet You!</string>
    <string name="start_studying_message">It’s time to start studying!</string>
    <string name="register_email_label">Email</string>
    <string name="register_password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="register_button">Sign Up</string>
    <string name="register_or">or</string>
    <string name="register_google">Sign Up with Google</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="register_login_button">Login</string>
    <string name="chat_bot_title">EZ Chat Bot</string>
    <string name="ask_question_hint">Ask EZ a question...</string>
    <string name="upload_file_button">Upload File</string>
    <string name="send_button">Send</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="logout_button">Logout</string>
    <string name="profile_picture_label">Profile Picture</string>
    <string name="delete_button">Delete</string>
    <string name="first_name_label">First Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="gender_label">Gender</string>
    <string name="date_of_birth_label">Date of Birth</string>
    <string name="select_date_button">Select a Date</string>
    <string name="email_labels">Email</string>
    <string name="save_button">Save</string>
    <string name="view_progress">View Your Progress,</string>
    <string name="question_paper_progress_chart">Question Paper Progress Chart</string>
    <string name="total_hours_label">Total Hours</string>
    <string name="loading_text">Loading...</string>
    <string name="back_button">Back</string>
    <string name="preparation_time_label">Total Logged Preparation Time</string>
    <string name="choose_study_duration">Choose Study Duration</string>
    <string name="mark_as_done">Mark as Done</string>
    <string name="loading_texts">Loading...</string>
    <string name="choose_paper">Choose a Paper,</string>
    <string name="loading_message_paper">Loading...</string>
    <string name="create_new_plan">Create a new plan</string>
    <string name="start_paper">Start Paper</string>
    <string name="all_active_papers">All active Papers</string>
    <string name="start_new_paper">Start a new Paper,</string>
    <string name="loading_username_message">Loading...</string>
    <string name="paper_name_label">Paper Name:</string>
    <string name="paper_name_hint">Enter a unique name for your paper</string>
    <string name="select_due_date_button">Select a Due Date</string>
    <string name="description_label">Description:</string>
    <string name="description_hint">Enter a short description (max 150 characters)</string>
    <string name="upload_pdf_button">Upload PDF of Question Paper</string>
    <string name="create_paper_button">Add Question Paper</string>
    <string name="view_question">View a Question,</string>
    <string name="loading_username_question">Loading...</string>
    <string name="loading_paper_name">Loading...</string>
    <string name="add_new_question">Add a New Question</string>
    <string name="start_question">Start Question</string>
    <string name="question_number">Q</string>
    <string name="question_description_loading">Loading Question Description...</string>
    <string name="view_question_button">View Question</string>
    <string name="add_question_title">Add Question</string>
    <string name="loading_username_messages">Loading...</string>
    <string name="loading_paper_names">Loading...</string>
    <string name="question_number_label">Question Number</string>
    <string name="question_number_hint">What is the question number?</string>
    <string name="description_labels">Description:</string>
    <string name="question_description_hint">Describe what the question wants in no more than 150 characters in length.</string>
    <string name="add_question_button">Add Question</string>
    <string name="day_details_title">Day Details</string>
    <string name="day_details_message">This is the detailed info about the day.</string>
    <string name="Time">time</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="view_help_button">View Help</string>
    <string name="settings_title">Settings</string>
    <string name="language_label">Language</string>
    <string name="notifications_label">Notifications</string>
    <string name="receive_notifications">Receive Notifications</string>
    <string name="theme_label">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="biometric_label">Biometric Authentication</string>
    <string name="enable_biometric">Enable Biometric Authentication</string>
    <string name="save_buttons">Save</string>
    <string name="toast_user_updateds">Settings saved successfully</string>
    <string name="first_name_labels">First name</string>
    <string name="last_name_labels">Last name</string>
    <string name="toast_user_updated">User updated successfully</string>
    <string name="toast_update_failed">Failed to update user: %1$s</string>
    <string name="toast_failure_message">Error: %1$s</string>
    <string name="toast_user_not_logged_in">User not logged in</string>
    <string name="toast_check_input_fields">Please check the input fields</string>
    <string name="toast_field_length_exceeded">%1$s cannot be longer than %2$d characters</string>
    <string name="invalid_login_credentials">Invalid login credentials</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="enter_email_password">Please enter your email and password</string>
    <string name="reset_instructions_sent">Reset instructions sent to your email</string>
    <string name="failed_to_send_reset_email">Failed to send reset email</string>
    <string name="email_field_empty">Email field cannot be empty</string>
    <string name="google_sign_in_failed">Google sign-in failed: %1$s</string>
    <string name="login_successful">Login successful</string>
    <string name="biometric_auth_failed">Biometric authentication failed, please retry</string>
    <string name="auth_error">Authentication error: %1$s</string>
    <string name="google_sign_in_failed_backend">Google Sign-In failed</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="user_updated_successfully">User updated successfully</string>
    <string name="welcome_users">Welcome, %1$s</string>
    <string name="registration_failed">Registration failed: %1$s</string>
    <string name="fill_required_fields">Please fill all the required fields</string>
    <string name="google_sign_in_faileds">Google Sign-In failed: %1$s</string>
    <string name="authentication_faileds">Authentication Failed</string>
    <string name="email_exists">Registration failed: Email already exists.</string>
    <string name="server_error">Server error. Please try again later.</string>
    <string name="unknown_error">Registration failed: %1$s</string>
    <string name="question_added_successfully">Question added successfully!</string>
    <string name="failed_to_add_question">Failed to add question: %1$s</string>
    <string name="api_call_failed">API call failed: %1$s</string>
    <string name="no_image_selected">No image selected</string>
    <string name="image_captured">Image captured: %1$s</string>
    <string name="no_image_captured">No image captured</string>
    <string name="enter_message_or_image">Please either enter a message OR upload an image. Not both.</string>
    <string name="enter_message_or_file">Please enter a message or select a file.</string>
    <string name="image_selected">Image selected: %1$s</string>
    <string name="last_page_message">You are already on the last page</string>
    <string name="first_page_message">You are already on the first page</string>
    <string name="question_completed_success">Question completed successfully!</string>
    <string name="time_logged_success">Time logged successfully!</string>
    <string name="please_enter_paper_name">Please enter a paper name.</string>
    <string name="paper_name_cannot_exceed">Paper name cannot exceed 50 characters.</string>
    <string name="please_enter_description">Please enter a description.</string>
    <string name="please_select_due_date">Please select a due date.</string>
    <string name="description_cannot_exceed">Description cannot exceed 150 characters.</string>
    <string name="please_upload_pdf">Please upload a PDF file.</string>
    <string name="study_paper_created_successfully">Study paper created successfully!</string>
    <string name="failed_to_create_study_paper">Failed to create study paper: %1$s</string>
    <string name="error_message">Error: %1$s</string>
    <string name="failed_to_get_file_name">Failed to get file name</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="toast_event_name_required">Please enter an event name.</string>
    <string name="toast_event_due_date_required">Please enter an event due date.</string>
    <string name="toast_event_saved_locally">Event saved locally. Will sync when connected.</string>
    <string name="toast_event_created_successfully">Event created successfully!</string>
    <string name="toast_event_creation_failed">Failed to create event: %1$s</string>
    <string name="toast_error_message">Error: %1$s</string>
    <string name="logo_description" />
</resources>