<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="easy_a.controllers.EventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_academic_events"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="#065BFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/loading_text"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/workout_card_background"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/monthly_academic_events"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <ImageButton
                        android:id="@+id/btnPreviousMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/previous_month_icon"
                        android:background="@drawable/button_transparent"
                        android:onClick="btnPreviousMonth_Clicked" />


                    <TextView
                        android:id="@+id/monthTitle"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textSize="12sp"
                        android:textColor="@android:color/white"
                        android:layout_marginBottom="10dp"
                        android:textAlignment="center"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="3dp"/>

                    <ImageButton
                        android:id="@+id/btnNextMonth"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/next_month_icon"
                        android:background="@drawable/button_transparent"
                        android:onClick="btnNextMonth_Clicked"/>


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_sunday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_monday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_tuesday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_wednesday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_thursday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_friday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/day_saturday"
                        android:textColor="@color/easy_a_blue"
                        android:textStyle="bold"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/calendar_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/addTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_name_label"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <!-- Workout Name Input -->
        <EditText
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/textfield"
            android:hint="@string/event_hint"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#A9A9A9" />

        <Button
            android:id="@+id/btnDueDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_event_date"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/btnAddEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_event"
            android:textAllCaps="false"
            android:background="@drawable/button"
            android:layout_marginTop="16dp"
            android:onClick="btnAddEventClicked"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>