<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/dark_gray"
    tools:context="easy_a.controllers.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/logo_description"
            android:scaleType="fitCenter"
            android:src="@drawable/easya_logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="👋"
                android:textSize="24sp"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/missed_you"
            android:textSize="16sp"
            android:textColor="#A9A9A9"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_label"
            android:textColorHint="#A9A9A9"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:background="@drawable/textfield"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/show_password"
            app:passwordToggleTint="@color/black"
            app:hintEnabled="false"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password_label"
                android:textColorHint="#A9A9A9"
                android:background="@drawable/textfield"
                android:textColor="@color/black"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/rememberMeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/forgotPasswordTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forgot_password"
                android:textColor="@color/easy_a_blue"
                android:gravity="end"
                android:onClick="onForgotPasswordClicked"/>
        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:background="@drawable/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:onClick="btnLoginClicked"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/dividerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textColor="@color/white"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:gravity="center"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/gray" />
        </LinearLayout>

        <Button
            android:id="@+id/googleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/sso_button"
            android:text="@string/login_google"
            android:textAllCaps="false"
            android:textSize="15dp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/google_ic"
            android:drawablePadding="-20dp"
            android:padding="12dp"
            android:onClick="btnGoogleLoginClicked"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/signUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <Button
                android:id="@+id/signUpLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:background="@drawable/button_transparent"
                android:textColor="@color/easy_a_blue"
                android:textStyle="bold"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="4dp"
                android:onClick="btnSignUpClicked" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
