<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    tools:context="easy_a.controllers.QuestionAddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Back Button -->
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/back_button"
                android:onClick="btnBackClicked"/>

            <!-- Spacer view to push buttons to either end -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_question_title"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:textColor="#065BFF"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/loading_username_message"/>

        </LinearLayout>

        <TextView
            android:id="@+id/paperName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_paper_name"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <ImageButton
            android:id="@+id/imageAddProgress"
            android:layout_width="match_parent"
            android:background="@drawable/workout_card_background"
            android:layout_height="200dp"
            android:src="@drawable/camera_icon"
            android:layout_margin="16dp"
            android:scaleType="fitCenter"
            android:onClick="imageAddProgressClicked"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_number_label"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/questionNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/textfield"
            android:hint="@string/question_number_hint"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#A9A9A9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_labels"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>

        <EditText
            android:id="@+id/questionDescription"
            android:layout_width="match_parent"
            android:layout_height="166dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/textfield"
            android:hint="@string/question_description_hint"
            android:gravity="top|start"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#A9A9A9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnAddQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_question_button"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:background="@drawable/button"
                android:onClick="onAddQuestionClicked"/>
        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>